fixed flickering tooltip fixed firms name length fixed sidebar active tab

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3132,6 +3132,10 @@
   max-width: 100px;
 }
 
+.max-w-150 {
+  max-width: 150px;
+}
+
 .max-w-xs {
   max-width: 20rem;
 }
@@ -8773,6 +8777,10 @@
     max-width: 100px;
   }
 
+  .sm\:max-w-150 {
+    max-width: 150px;
+  }
+
   .sm\:max-w-xs {
     max-width: 20rem;
   }
@@ -14397,6 +14405,10 @@
 
   .md\:max-w-100 {
     max-width: 100px;
+  }
+
+  .md\:max-w-150 {
+    max-width: 150px;
   }
 
   .md\:max-w-xs {
@@ -20025,6 +20037,10 @@
     max-width: 100px;
   }
 
+  .lg\:max-w-150 {
+    max-width: 150px;
+  }
+
   .lg\:max-w-xs {
     max-width: 20rem;
   }
@@ -25651,6 +25667,10 @@
     max-width: 100px;
   }
 
+  .xl\:max-w-150 {
+    max-width: 150px;
+  }
+
   .xl\:max-w-xs {
     max-width: 20rem;
   }
@@ -31275,6 +31295,10 @@
 
   .hd\:max-w-100 {
     max-width: 100px;
+  }
+
+  .hd\:max-w-150 {
+    max-width: 150px;
   }
 
   .hd\:max-w-xs {
